Modificacion de Vista

--- a/application/views/Vproducto.html
+++ b/application/views/Vproducto.html
@@ -26,6 +26,8 @@
 					<br>
 					<button type="button" ng-click="submit()">Login</button>
 				</form>
+				{{mensajeok}}
+				{{mensajeerror}}
 			</div>
 	</body>
 </html>
