--- a/application/views/index.html
+++ b/application/views/index.html
@@ -1,10 +1,14 @@
-<html>
-<head>
-	<title>403 Forbidden</title>
-</head>
-<body>
-
-<p>Directory access is forbidden.</p>
-
-</body>
+<!Doctype html>
+<html ng-app="SVentas">
+	<head>
+		<meta charset="UTF-8">
+		<title>AngularJS</title>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>		
+		<script src="https://code.angularjs.org/1.4.7/angular-route.min.js"></script>		
+		<script src="js/Cjsproducto.js"></script>		
+	
+	</head> 
+	<body >
+			<div ng-View></div>
+	</body>
 </html>
