--- a/application/views/Vproducto.html
+++ b/application/views/Vproducto.html
@@ -7,12 +7,11 @@
 		<br>
 		Stock:     <input type="text" id="stock" ng-model="stock"><br>
 		<br>
-		IDmedida:  <input type="text" id="idmedida" ng-model="idmedida"><br>
+		ID_medida:  <input type="text" id="idmedida" ng-model="idmedida"><br>
 		<br>
-		IDtipo:    <input type="text" id="idtipo" ng-model="idtipo"><br>
+		ID_tipo:    <input type="text" id="idtipo" ng-model="idtipo"><br>
 		<br>
-		<button type="button" ng-click="submit()">Login
-		</button>
+		<button type="button" ng-click="submit()">Agregar Producto
 	</form>
 	{{mensajeok}}
 	{{mensajeerror}}
