--- a/application/views/index.html
+++ b/application/views/index.html
@@ -2,20 +2,50 @@
 <html ng-app="SVentas">
 	<head>
 		<meta charset="UTF-8">
-		<title>AngularJS</title>
+		
+		<meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>AngularJS</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width">
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="bootstrap.min.css">
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="bootstrap-theme.min.css">
+        <style> .btn{margin-bottom: 10px} </style>
+
 		<script src="angular.min.js"></script>		
 		<script src="angular-route.min.js"></script>		
 		<script src="js/Cjsproducto.js"></script>		
 	
 	</head> 
 	<body ng-controller="eventos">
+			<nav class="navbar navbar-fixed-top navbar-inverse">
+            
+	            <div class="container">
+	                
+	                <div class="navbar-brand">
+	                    Sistema De Ventas
+	                </div>
+	                
+	                <div class="collapse navbar-collapse navHeaderCollapse">
+	                    <ul class=" nav navbar-nav navbar-right">
+	                        <li  ><a class="btn btn-link " type="button" ng-click="agregar()">Agregar</a></li>
+			    			<li><a class="btn btn-link " type="button" ng-click="listar()">Listar</a></li>
+	                    </ul>
+                               
+                	</div>
+	               
+	            </div>
+            </nav>
 
-			
-				<button type="button" ng-click="agregar()">Agregar</button>
-			    <button type="button" ng-click="listar()">Listar</button>
-			    
-			
-			 <div ng-controller="agregarP" ng-show="flagP">
+            <div class="jumbotron">
+                <div class="container">
+                    <h2>Transaccion Productos</h2>
+                </div>
+         	</div>
+        
+			 <div class ="jumbobotron" ng-controller="agregarP" ng-show="flagP">
 				
 					<h1>Ingresar Nuevo Producto</h1>
 						
@@ -49,30 +79,29 @@
                         <span ng-show = "Aproducto.Tipo.$error.required">Tipo is required.</span>
                      	</span>
 						<br>
-						<button type="button" ng-click="reset()"> Reset </button>
-						<button  ng-disabled = "Aproducto.Nombre.$dirty &&
+						<a class="btn btn-default btn-primary" type="button" ng-click="reset()"> Reset </a>
+						<a class="btn btn-default btn-primary"  ng-disabled = "Aproducto.Nombre.$dirty &&
                         Aproducto.Nombre.$invalid || Aproducto.Precio.$dirty &&
                         Aproducto.Precio.$invalid || Aproducto.Medida.$dirty &&
                         Aproducto.Medida.$invalid || Aproducto.Tipo.$dirty &&
-                        Aproducto.Tipo.$invalid" ng-click="submit()">Enviar</button><br>
+                        Aproducto.Tipo.$invalid" ng-click="submit()">Enviar</a><br>
 
 					</form>
 					
 			</div>   
 			
-
-			<div ng-controller="ListarP" ng-show="flagL">
-				<table border="1"> Lista de Productos
-					<tr>
+			<div class="container" ng-controller="ListarP" ng-show="flagL">
+				<table border="1"> <h1>Ingresar Nuevo Producto</h1>
+					<tr class="list-group">
 						<td>Nombre Producto</td>
 						<td>Precio Producto</td>
 						<td>Imagen Producto</td>
 						
 					</tr>	
-					<tr ng-repeat="list in listaP">
-						<td> {{ list.nombreprod}}</td>
-						<td>{{list.precio}}</td>
-						<td>{{list.img}}</td>
+					<tr class="list-group" ng-repeat="list in listaP">
+						<td > {{ list.nombreprod}}</td>
+						<td >{{list.precio}}</td>
+						<td >{{list.img}}</td>
 						
 					</tr>	
 				</table>	
