--- a/application/views/index.html
+++ b/application/views/index.html
@@ -11,7 +11,7 @@
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="bootstrap.min.css">
         <!-- Optional theme -->
-        <link rel="stylesheet" href="bootstrap-theme.min.css">
+        <link rel="stylesheet" href="bootstrap-theme.css">
         <style> .btn{margin-bottom: 10px} </style>
 
 		<script src="angular.min.js"></script>		
@@ -30,9 +30,10 @@
 	                
 	                <div class="collapse navbar-collapse navHeaderCollapse">
 	                    <ul class=" nav navbar-nav navbar-right">
-	                        <li  ><a class="btn btn-link " type="button" ng-click="agregar()">Agregar</a></li>
+	                        <li><a class="btn btn-link " type="button" ng-click="agregar()">Agregar</a></li>
 			    			<li><a class="btn btn-link " type="button" ng-click="listar()">Listar</a></li>
-	                    </ul>
+			    			<li><a class="btn btn-link " type="button" ng-click="modificar()">Modificar</a></li>
+			    		</ul>
                                
                 	</div>
 	               
@@ -52,60 +53,92 @@
 					<h1 ><font color="red">{{mensajeok}}</font></h1>
 					<h1 ><font color="red">{{mensajeerror}}</font></h1>
 
-					<form name="Aproducto"  novalidate>
+					<form class="form-horizontal" role="form" name="Aproducto"  novalidate>
 						
-						Nombre:    <input name="Nombre" type="text" id="nombre" ng-model="nombre" placeholder="Ingresar Nombre" required ><br>
-						<span style = "color:red" ng-show = "Aproducto.Nombre.$dirty && Aproducto.Nombre.$invalid">
-                        <span ng-show = "Aproducto.Nombre.$error.required">Nombre is required.</span>
-                     	</span>
-						<br>
-						Precio:    <input name="Precio" type="text" id="precio" ng-model="precio" placeholder="Ingresar Precio 00.0" required><br>
-						<span style = "color:red" ng-show = "Aproducto.Precio.$dirty && Aproducto.Precio.$invalid">
-                        <span ng-show = "Aproducto.Precio.$error.required">Precio is required.</span>
-                     	</span>
-						<br>
-						Stock:     <input name="Stock" type="text" id="stock" ng-model="stock" placeholder="Ingresar stock kilo,litro,unidad" required><br>
-						<span style = "color:red" ng-show = "Aproducto.Stock.$dirty && Aproducto.Stock.$invalid">
-                        <span ng-show = "Aproducto.Stock.$error.required">Stock is required.</span>
-                     	</span>
-						<br>
-						IDmedida:  <input name="Medida" type="text" id="idmedida" ng-model="idmedida" placeholder="Ingresar id_medida" required><br>
-						<span style = "color:red" ng-show = "Aproducto.Medida.$dirty && Aproducto.Medida.$invalid">
-                        <span ng-show = "Aproducto.Medida.$error.required">Medida is required.</span>
-                     	</span>
-						<br>
-						IDtipo:    <input name="Tipo" type="text" id="idtipo" ng-model="idtipo" placeholder="Ingresar id_tipo" required><br>
-						<span style = "color:red" ng-show = "Aproducto.Tipo.$dirty && Aproducto.Tipo.$invalid">
-                        <span ng-show = "Aproducto.Tipo.$error.required">Tipo is required.</span>
-                     	</span>
-						<br>
-						<a class="btn btn-default btn-primary" type="button" ng-click="reset()"> Reset </a>
-						<a class="btn btn-default btn-primary"  ng-disabled = "Aproducto.Nombre.$dirty &&
-                        Aproducto.Nombre.$invalid || Aproducto.Precio.$dirty &&
-                        Aproducto.Precio.$invalid || Aproducto.Medida.$dirty &&
-                        Aproducto.Medida.$invalid || Aproducto.Tipo.$dirty &&
-                        Aproducto.Tipo.$invalid" ng-click="submit()">Enviar</a><br>
+						<div class="form-group">
+					      <label class="control-label col-sm-2" for="nombre">Nombre:</label>
+					      <div class="col-sm-4">
+					        <input name="Nombres" type="text"  class="form-control" id="nombre" ng-model="producto.nombre" placeholder="Ingresar Nombre" required>
+					        <span style = "color:red" ng-show = "Aproducto.Nombres.$dirty && Aproducto.Nombres.$invalid">
+	                        <span ng-show = "Aproducto.Nombres.$error.required">Nombre is required.</span>
+	                     	</span>
+	                     </div>
+					    </div>
 
+					    <div class="form-group">
+					      <label class="control-label col-sm-2" for="Precio">Precio:</label>
+					      <div class="col-sm-4">
+					        <input name="Precios" type="text"  class="form-control" id="precio" ng-model="producto.precio" placeholder="Ingresar Precio 00.0" required>
+					        <span style = "color:red" ng-show = "Aproducto.Precios.$dirty && Aproducto.Precios.$invalid">
+	                        <span ng-show = "Aproducto.Precios.$error.required">Precio is required.</span>
+	                     	</span>
+					      </div>
+					    </div>
+
+					    <div class="form-group">
+					      <label class="control-label col-sm-2" for="Stock">Stock:</label>
+					      <div class="col-sm-4">
+					        <input name="Stocks" type="text"  class="form-control" id="stock" ng-model="producto.stock" placeholder="Ingresar stock kilo,litro,unidad" required>
+							<span style = "color:red" ng-show = "Aproducto.Stocks.$dirty && Aproducto.Stocks.$invalid">
+	                        <span ng-show = "Aproducto.Stocks.$error.required">Stock is required.</span>
+	                     	</span>
+					      </div>
+					    </div>
+
+					    <div class="form-group">
+					      <label class="control-label col-sm-2" for="Idmedida">IDMEDIDA:</label>
+					      <div class="col-sm-4">
+					        <select name="Medidas" class="form-control" id="idmedida" ng-options="c.idmedida as c.medida for c in listaM" ng-model="producto.idmedida" placeholder="Ingresar id_medida" required></select>
+							<span style = "color:red" ng-show = "Aproducto.Medidas.$dirty && Aproducto.Medidas.$invalid">
+	                        <span ng-show = "Aproducto.Medidas.$error.required">Medida is required.</span>
+	                     	</span>
+					      </div>
+					    </div>
+
+					    <div class="form-group">
+					      <label class="control-label col-sm-2" for="IDTIPO">IDTIPO:</label>
+					      <div class="col-sm-4">
+					        <select name="Tipos" class="form-control" id="idtipo" ng-options="b.idtipoprod as b.tipoprod for b in listaT" ng-model="producto.idtipo" placeholder="Ingresar id_tipo" required></select>
+					        <span style = "color:red" ng-show = "Aproducto.Tipos.$dirty && Aproducto.Tipos.$invalid">
+	                        <span ng-show = "Aproducto.Tipos.$error.required">Tipo is required.</span>
+	                     	</span>
+					      </div>
+					    </div>
+						
+						    <div class="form-group">        
+						      <div class="col-sm-offset-2 col-sm-10">
+						        <a class="btn btn-default btn-primary" type="button" ng-click="reset()"> Reset </a>
+								<a class="btn btn-default btn-primary"  ng-disabled = "Aproducto.Nombres.$dirty &&
+		                        Aproducto.Nombres.$invalid || Aproducto.Precios.$dirty &&
+		                        Aproducto.Precios.$invalid || Aproducto.Medidas.$dirty &&
+		                        Aproducto.Medidas.$invalid || Aproducto.Tipos.$dirty &&
+		                        Aproducto.Tipos.$invalid" ng-click="submit()">Enviar</a>
+						      </div>
+						    </div>
 					</form>
 					
 			</div>   
 			
-			<div class="container" ng-controller="ListarP" ng-show="flagL">
-				<table border="1"> <h1>Ingresar Nuevo Producto</h1>
-					<tr class="list-group">
+			<div class="table-hover" ng-controller="ListarP" ng-show="flagL">
+				<table class="table"> <h1>Ingresar Nuevo Producto
+					<tr >
 						<td>Nombre Producto</td>
 						<td>Precio Producto</td>
 						<td>Imagen Producto</td>
 						
 					</tr>	
-					<tr class="list-group" ng-repeat="list in listaP">
-						<td > {{ list.nombreprod}}</td>
-						<td >{{list.precio}}</td>
-						<td >{{list.img}}</td>
-						
+					<tr ng-repeat="list in listaP">
+						<td>{{list.nombreprod}}</td>
+						<td>{{list.precio |currency: $}}</td>
+						<td>
+							<a class="btn btn-warning" type="button" ng-click="eliminar()">Eliminar</a>
+							<tr >
+						</td>
 					</tr>	
 				</table>	
 			</div>
 			
+			
+
 	</body>
 </html>
