--- a/application/views/index.html
+++ b/application/views/index.html
@@ -23,7 +23,7 @@
 	            <div class="container">
 	                
 	                <div class="navbar-brand">
-	                    Sistema De Ventas
+	                    Sistema De Ventas :D
 	                </div>
 	                
 	                <div class="collapse navbar-collapse navHeaderCollapse">
