--- a/application/views/index.html
+++ b/application/views/index.html
@@ -4,20 +4,21 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>AngularJS</title>
-        <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="bootstrap.min.css">
         <!-- Optional theme -->
         <link rel="stylesheet" href="bootstrap-theme.css">
-        <style> .btn{margin-bottom: 10px} </style>	
+       
+        
         <script src="jquery.min.js"></script>
 		<script src="angular.min.js"></script>		
 		<script src="angular-route.min.js"></script>	
 		<script src="js/Cjsproducto.js"></script>
+		<script src="js/factoria.js"></script>
 			
 	</head> 
-	<body ng-controller="eventos">
+	<body >
 			<nav class="navbar navbar-fixed-top navbar-inverse">
             
 	            <div class="container">
@@ -26,25 +27,16 @@
 	                    Sistema De Ventas :D
 	                </div>
 	                
-	                <div class="collapse navbar-collapse navHeaderCollapse">
-	                    <ul class=" nav navbar-nav navbar-right">
-	                        <li><a class="btn btn-link " type="button" ng-click="agregar()">Agregar</a></li>
-			    			<li><a class="btn btn-link " type="button" ng-click="listar()">Listar</a></li>
-			    			<li><a class="btn btn-link " type="button" ng-click="modificar()">Modificar</a></li>
-			    		</ul>
-                               
-                	</div>
-	               
+	                             
 	            </div>
             </nav>
-
+           
             <div class="jumbotron">
-                <div class="container">
                     <h2>Transaccion Productos</h2>
-                </div>
-         	</div>
+            </div>
+         	
         
-         	<div class ="jumbobotron" ng-controller="agregarP" ng-show="flagP">
+         	<div  class="container" ng-controller="agregarP" >
 				
 					<h1>Ingresar Nuevo Producto</h1>
 						
@@ -56,7 +48,7 @@
 						<div class="form-group">
 					      <label class="control-label col-sm-2" for="nombre">Nombre:</label>
 					      <div class="col-sm-4">
-					        <input name="Nombres" type="text"  class="form-control" id="nombre" ng-model="producto.nombre" placeholder="Ingresar Nombre" required>
+					        <input name="Nombres" type="text"  class="form-control" id="nombre" ng-model="nombre_" placeholder="Ingresar Nombre" required>
 					        <span style = "color:red" ng-show = "Aproducto.Nombres.$dirty && Aproducto.Nombres.$invalid">
 	                        <span ng-show = "Aproducto.Nombres.$error.required">Nombre is required.</span>
 	                     	</span>
@@ -66,7 +58,7 @@
 					    <div class="form-group">
 					      <label class="control-label col-sm-2" for="Precio">Precio:</label>
 					      <div class="col-sm-4">
-					        <input name="Precios" type="text"  class="form-control" id="precio" ng-model="producto.precio" placeholder="Ingresar Precio 00.0" required>
+					        <input name="Precios" type="number"  class="form-control" id="precio" ng-model="producto.precio" placeholder="Ingresar Precio 00.0" required>
 					        <span style = "color:red" ng-show = "Aproducto.Precios.$dirty && Aproducto.Precios.$invalid">
 	                        <span ng-show = "Aproducto.Precios.$error.required">Precio is required.</span>
 	                     	</span>
@@ -76,7 +68,7 @@
 					    <div class="form-group">
 					      <label class="control-label col-sm-2" for="Stock">Stock:</label>
 					      <div class="col-sm-4">
-					        <input name="Stocks" type="text"  class="form-control" id="stock" ng-model="producto.stock" placeholder="Ingresar stock kilo,litro,unidad" required>
+					        <input name="Stocks" type="number"  class="form-control" id="stock" ng-model="producto.stock" placeholder="Ingresar stock kilo,litro,unidad" required>
 							<span style = "color:red" ng-show = "Aproducto.Stocks.$dirty && Aproducto.Stocks.$invalid">
 	                        <span ng-show = "Aproducto.Stocks.$error.required">Stock is required.</span>
 	                     	</span>
@@ -106,121 +98,52 @@
 					    				
 						    <div class="form-group">        
 						      <div class="col-sm-offset-2 col-sm-10">
-						        <a class="btn btn-default btn-primary" type="button" ng-click="reset()"> Reset </a>
-								<a class="btn btn-default btn-primary"  ng-disabled = "Aproducto.Nombres.$dirty &&
+						        <button class="btn btn-default btn-primary" type="button" ng-click="reset()">Reset </button>
+								<button class="btn btn-default btn-primary"  ng-disabled = "Aproducto.Nombres.$dirty &&
 		                        Aproducto.Nombres.$invalid || Aproducto.Precios.$dirty &&
 		                        Aproducto.Precios.$invalid || Aproducto.Medidas.$dirty &&
 		                        Aproducto.Medidas.$invalid || Aproducto.Tipos.$dirty &&
-		                        Aproducto.Tipos.$invalid" ng-click="submit()">Enviar</a>
+		                        Aproducto.Tipos.$invalid" ng-click="submit()">Enviar</button>
 						      </div>
 						    </div>
 					</form>
 					
-			</div>   
-			
-			<div class="table-hover" ng-controller="ListarP" ng-show="flagL">
-					
-					<div class="form-group">
-					     <div class="col-sm-4">
-					     	<h1>Lista de Productos</h1>
-					        <input type="search"  class="form-control" ng-model="busqueda"   placeholder="Buscar Producto">
-					    </div>
-					</div>
-					<table class="table">
-					<tr >
-						<td>Nombre Producto</td>
-						<td>Precio Producto</td>
-						<td>Imagen Producto</td>
-						
-					</tr>	
-					<tr ng-repeat="list in listaP | filter: busqueda">
-						<td>{{list.nombreprod}}</td>
-						<td>{{list.precio |currency: $}}</td>
-						<td>
-							<a class="btn btn-warning" type="button" ng-click="eliminar()">Eliminar</a>
+								
+					<div class="table-responsive">
+						<div class="form-group">
+						     <div class="col-sm-4">
+						     	<h1>Lista de Productos</h1>
+						        <input type="search"  class="form-control" ng-model="busqueda"   placeholder="Buscar Producto"><br>
+						     </div>
+						</div>
+						<table ata-toggle="table" class="table table-bordered table-striped table-hover m-tabla tabla-web" fixed-tabla>
 							<tr >
-						</td>
-					</tr>	
-				</table>	
+								<td style="text-align: center;">Nombre Producto </td>
+								<td style="text-align: center;">Precio Producto </td>
+								<td style="text-align: center;">Stock Producto </td>
+								<td style="text-align: center;" colspan="3">Operaciones</td>
+								
+							</tr>	
+							<tr   ng-repeat="list in listaP | filter: busqueda">
+								<td style="text-align: center;">{{list.nombreprod}}</td>
+								<td style="text-align: center;">{{list.precio |currency: $}}</td>
+								<td style="text-align: center;">{{list.stock}}</td>
+								<td style="text-align: center;">
+										<img src="Imagenes/meme.jpg" width="70" height="70">
+								</td>
+								<td style="text-align: center;">		
+										<button type="button" class="btn btn-primary"  ng-click="modificar(list)">Modificar</button>
+								</td>
+								<td style="text-align: center;">
+										<button type="button" class="btn btn-danger"  ng-click="eliminar(list)">Eliminar</button>
+
+								</td>
+							</tr>	
+					    </table>	
+					</div>
 			</div>
 			
-			<div class ="jumbobotron" ng-controller="modificarP" ng-show="flagM">
-				
-					<h1>Modificar Producto</h1>
-						
-					<h1 ><font color="red">{{mensaje_ok}}</font></h1>
-					<h1 ><font color="red">{{mensaje_error}}</font></h1>
 
-
-					<form class="form-horizontal" role="form" name="Mproducto"  novalidate>
-						
-						<div class="form-group">
-					      <label class="control-label col-sm-2" for="nombre">Nombre:</label>
-					      <div class="col-sm-4">
-					        <select name="Nombres" class="form-control" id="nombre" 
-					        ng-options="d.idnombreprod as d.nombreprod for d in listaMP"  
-					        ng-model="hola" required></select>{{hola}}
-					        <span style = "color:red" ng-show = "Mproducto.Nombres.$dirty && Mproducto.Nombres.$invalid">
-	                        <span ng-show = "Mproducto.Nombres.$error.required">Nombre is required.</span>
-	                     	</span>
-	                     </div>
-					    </div>
-
-					    <div class="form-group">
-					      <label class="control-label col-sm-2" for="Precio">Precio:</label>
-					      <div class="col-sm-4">
-					        <input name="Precios" type="text"  class="form-control" id="precio" ng-model="d.precio" placeholder="Ingresar Precio 00.0" required>
-					        <span style = "color:red" ng-show = "Mproducto.Precios.$dirty && Mproducto.Precios.$invalid">
-	                        <span ng-show = "Aproducto.Precios.$error.required">Precio is required.</span>
-	                     	</span>
-					      </div>
-					    </div>
-
-					    <div class="form-group">
-					      <label class="control-label col-sm-2" for="Stock">Stock:</label>
-					      <div class="col-sm-4">
-					        <input name="Stocks" type="text"  class="form-control" id="stock" ng-model="d.stock" placeholder="Ingresar stock kilo,litro,unidad" required>
-							<span style = "color:red" ng-show = "Mproducto.Stocks.$dirty && Mproducto.Stocks.$invalid">
-	                        <span ng-show = "Mproducto.Stocks.$error.required">Stock is required.</span>
-	                     	</span>
-					      </div>
-					    </div>
-
-					    <div class="form-group">
-					      <label class="control-label col-sm-2" for="Idmedida">IDMEDIDA:</label>
-					      <div class="col-sm-4">
-					        <select name="Medidas" class="form-control" id="idmedida" ng-options="c.idmedida as c.medida for c in listaMM" ng-model="d.idmedida" required></select>
-							<span style = "color:red" ng-show = "Mproducto.Medidas.$dirty && Mproducto.Medidas.$invalid">
-	                        <span ng-show = "Mproducto.Medidas.$error.required">Medida is required.</span>
-	                     	</span>
-					      </div>
-					    </div>
-
-					    <div class="form-group">
-					      <label class="control-label col-sm-2" for="IDTIPO">IDTIPO:</label>
-					      <div class="col-sm-4">
-					        <select name="Tipos" class="form-control" id="idtipo" ng-options="b.idtipoprod as b.tipoprod for b in listaMT" ng-model="d.idtipo"  required></select> 
-					        <span style = "color:red" ng-show = "Mproducto.Tipos.$dirty && Mproducto.Tipos.$invalid">
-	                        <span ng-show = "Mproducto.Tipos.$error.required">Tipo is required.</span>
-	                     	</span>
-					      </div>
-					    </div>
-
-					    				
-						    <div class="form-group">        
-						      <div class="col-sm-offset-2 col-sm-10">
-						        <a class="btn btn-default btn-primary" type="button" ng-click="reset()"> Reset </a>
-								<a class="btn btn-default btn-primary"  ng-disabled = "Mproducto.Nombres.$dirty &&
-		                        Mproducto.Nombres.$invalid || Mproducto.Precios.$dirty &&
-		                        Mproducto.Precios.$invalid || Mproducto.Medidas.$dirty &&
-		                        Mproducto.Medidas.$invalid || Mproducto.Tipos.$dirty &&
-		                        Mproducto.Tipos.$invalid" ng-click="guardar()">Enviar</a>
-						      </div>
-						    </div>
-					</form>
-
-					
-			</div> 
 			
     </body>
 </html>
