--- a/template/Vproducto.html
+++ b/template/Vproducto.html
@@ -1,11 +1,16 @@
 <div  class="container" ng-controller="Producto" >	
 	<nav class="navbar navbar-fixed-top navbar-inverse">
 	            
-		<div class="container">
-		                
+		<div class="container" >
+		             
+		    <div class="navbar-brand navbar-left">
+		    	<img src="Imagenes/icono.ico" width="70" height="70">
+		         
+		    </div>  
 		    <div class="navbar-brand">
-		         Sistema De Ventas :D
+		    	Transaccion Productos
 		    </div>
+		     	
 		    <div class="collapse navbar-collapse navHeaderCollapse">
 			    <ul class=" nav navbar-nav navbar-right">
 			         <li><a class="btn btn-link" type="button" ng-click="inicio()">
@@ -14,13 +19,13 @@
 		    </div>
 		                             
 		</div>
+		
 	</nav>
-	           
+
 	<div class="jumbotron">
-	    <h2>Transaccion Productos</h2>
+
 	</div>
-         	
-        
+	
 	<h1>Ingresar Nuevo Producto</h1>
 	<form class="form-horizontal" role="form" name="Aproducto"  novalidate>
 		
