--- a/application/views/index.html
+++ b/application/views/index.html
@@ -10,11 +10,13 @@
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <!-- Optional theme -->
-        <link rel="stylesheet" href="css/bootstrap-theme.css">
-               
+        <link rel="stylesheet" href="css/bootstrap-theme.css">       
         <link rel="stylesheet" href="fonts/glyphicons-halflings-regular.ttf">
         <link rel="stylesheet" href="fonts/glyphicons-halflings-regular.woff">
         <link rel="stylesheet" href="fonts/glyphicons-halflings-regular.woff2">
+        
+
+    	<script src="js/slideShow.js"></script>
         <script src="js/jquery.min.js"></script>
 		<script src="js/angular.min.js"></script>		
 		<script src="js/angular-route.min.js"></script>	
