--- a/template/Login.html
+++ b/template/Login.html
@@ -1,28 +1,29 @@
 <div class="container" ng-controller="Clogeo">
+	
 	<nav class="navbar navbar-fixed-top navbar-inverse">
 		            
 			<div class="container">
 			     
 			     <div class="navbar-brand navbar-left">
 		    		<img src="Imagenes/icono.ico" width="70" height="70">
-		         
-		    	</div>             
+		        </div>             
 			    <div class="navbar-brand">
-			         Sistema De Ventas Bienvenido/Sales system Welcome :D
+			         Sistema De Ventas Bienvenido
 			    </div>
 			    <div class="collapse navbar-collapse navHeaderCollapse">
 				    <ul class=" nav navbar-nav navbar-right">
 				    	<li>
 						    <div class="pull-right">
-					        <form class="navbar-form" role="form">
+					        <form name="Flogeo" class="navbar-form" role="form" novalidate>
 					        <div class="input-group">
-					            <input type="text" class="form-control" placeholder="Usuario" ng-model="login.user">
+					            <input name="USER" type="text" class="form-control" placeholder="Usuario" ng-model="login.user">
 					        </div>
 					        <div class="input-group">
-					            <input type="text" class="form-control" placeholder="Password" ng-model="login.pass">
+					            <input name="PASS" type="password" class="form-control" placeholder="Password" ng-model="login.pass">
 					        </div>
 				    	</li>
-				    	<li><a type="button" class="btn btn-link" ng-click="menu()"><span class="glyphicon glyphicon-log-in"></span>Login</a></li>
+				    	<li><a type="button" class="btn btn-link" ng-disable = "Flogeo.USER.$pristine &&
+                			Flogeo.USER.$invalid || Flogeo.PASS.$pristine &&  Flogeo.PASS.$invalid" ng-click="menu()"><span class="glyphicon glyphicon-log-in"></span>Login</a></li>
 
 				    </ul>
 				    
@@ -33,5 +34,67 @@
 	<div class="jumbotron">
 
 	</div>
+
+	<div >        
+        <div class="centro">
+            <div class="row">
+                <div class="col-md-1">
+                </div>
+                <div class="col-md-6">
+                    <div class="row">
+                        <div id="titulo" class="col-md-12">
+                            <h1><center><b>"EL PULPIN"</b><br><h3>Tu Preferencia nos hace cada vez m&aacute;s Grandes</h3></br></center></h1>
+                        </div>
+                        <center>
+                        	<div class="foot">
+                                <p>Av. no hay todo es en online N° 808</p> 
+                                <p>proyecto_elpulpin@outlook.com</p>
+                                <p>Castilla, Piura, Per&uacute;</p>
+                       		 </div> 
+                    	</center>
+                           
+                    </div>
+                    
+                </div> 
+
+                <div class="col-md-4" ng-show="flag">    
+                    <div class="row">   
+                        <div class="col-md-12" id="login">
+                            <div id="tit">¿No tienes una cuenta?</div>
+                            <p><h1>Registrate </h1></p>
+                            <form method="get" class="form-horizontal" role="form" name="Fregistrar">
+                                <input name="Nombres" type="text" id="nombre" class="form-control " placeholder="Nombre" ng-model="registro.nombre" maxlength ="20" ><br>
+                                <input name="Apellidos" type="text" id="apellido" class="form-control" placeholder="Apellido" ng-model="registro.apellido" maxlength ="40" ><br>
+                                <input name="Dnis" type="number" id="dni" class="form-control" placeholder="Dni" ng-model="registro.dni" max="99999999"><br>
+                                <input  name="Emails" type="email" id="email" class="form-control" placeholder="Email" ng-model="registro.email" maxlength ="30" ><br>
+                                <input  name="Teles" type="number" id="telefono" class="form-control" placeholder="Telefono" ng-model="registro.telefono" min="999999" max ="999999999999999"><br>
+                                <button  class="btn btn-lg btn-primary " ng-click="registro()">Ingresar</button>
+                            </form>
+                            
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4" ng-hide="flag">    
+                    <div class="row">   
+                        <div class="col-md-12" id="login">
+                            <div id="tit">falta poco para terminar</div>
+                            <p><h1>Crear Usuario </h1></p>
+                            <form method="get" class="form-horizontal" role="form" name="Fregistrar">
+                                <input name="Usuario" type="text" id="usuario" class="form-control " placeholder="Usuario" ng-model="registro.user" maxlength ="10" ><br>
+                                <input name="Password" type="password" id="password" class="form-control" placeholder="Password" ng-model="registro.pass" maxlength ="10" ><br>
+                                <button  class="btn btn-lg btn-primary " ng-click="registrar()">Registrar</button>
+                            </form>
+                            
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-1">
+                </div>
+            </div>
+        </div>
+    </div>
+    
+
 	
 </div>
