--- a/template/Login.html
+++ b/template/Login.html
@@ -1,4 +1,4 @@
-<div class="container" ng-controller="Clogeo">
+<div class="container" ng-controller="Ctrlogeo">
 	
 	<nav class="navbar navbar-fixed-top navbar-inverse">
 		            
